syntax = "proto3";

option go_package="grpc/proto";

service User {
    rpc GetUser (UserRequest) returns (UserResponse) {}
}


message UserRequest {
    int32 user_id = 1;
}


message UserResponse {
    string user_name = 1;
    string user_email = 2;
}